--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,6 @@
 name: CI Tests
 
-on: [pull_request]
+on: [push]
 
 jobs:
   blueberry:
@@ -50,7 +50,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
         
-  docs404:
+  docs202:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -87,4 +87,8 @@ jobs:
     - name: Wait for server
       run: sleep 20
     - name: Run tests
-      run: python ./ci/docs404.py
+      run: python ./ci/docs200.py
+
+  broken_links:
+    - name: Hugo Broken Link Check
+      uses: marccampbell/hugo-linkcheck-action@v0.1.3
